<resources>
    <string name="app_name">ClassManager</string>
    <string name="title_activity_drawer">Classes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="NEWS_CHANNEL_ID">news</string>
    <string name="CHANNEL_NEWS">News</string>
    <string name="CHANNEL_DESCRIPTION">Get informed with new updates</string>
    <string name="DEBUG_TAG">LearningPushNotifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="choose_image">Choose Image</string>
    <string name="write_something">Write Something</string>
    <string name="post">Post</string>

</resources>
