<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AdminAddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/ShowImageView"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonChooseImage"
            android:layout_marginTop="20dp"
            android:text="@string/choose_image"
            android:layout_gravity="center"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ImageNameEditText"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_name"
            />



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/disEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/write_something" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonUploadImage"
            android:layout_marginTop="20dp"
            android:text="@string/post"/>


    </LinearLayout>



</ScrollView>